SERVER-82129 Discard ShardServerCatalogCacheLoader persisted cache if it's missing the uuid field (#17758)

GitOrigin-RevId: 5beaa1ce72d4a5f490623dcc7b67ecb11864a28c